adapt connection check evaluation to new backend without worker info